--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,12 @@
     </developers>
     <distributionManagement>
       <repository>
-            <id>deployment</id>
+            <id>mavan-release</id>
             <name>Internal Releases</name>
             <url>http://127.0.0.1:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>deployment</id>
+            <id>mavan-snapshot</id>
             <name>Internal Snapshot Releases</name>
             <url>http://127.0.0.1:8081/repository/maven-snapshots/</url>
         </snapshotRepository>  
