--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
       <repository>
             <id>mavan-release</id>
             <name>Internal Releases</name>
-            <url>http://127.0.0.1:8081/repository/maven-releases/</url>
+            <url>http://localhost:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>mavan-snapshot</id>
             <name>Internal Snapshot Releases</name>
-            <url>http://127.0.0.1:8081/repository/maven-snapshots/</url>
+            <url>http://localhost:8081/repository/maven-snapshots/</url>
         </snapshotRepository>  
     </distributionManagement>
     <build>
